fixed input with on mobile

--- a/admin/css/yasr-admin.css
+++ b/admin/css/yasr-admin.css
@@ -880,7 +880,8 @@ div.yasr-select-img-container input {
 }
 
 .yasr-input-text-upload-image {
-    display: inline-block;
+    width: auto !important;
+    display: inline-block !important;
 }
 
 .yasr-text-upload-image {
